kubernetes/apps/media/prowlarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr-develop:1.28.2@sha256:f4ab000bcd12f61e064ba43c28b4afb7b732fcf157aa183d1bfa238347b73017
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: prowlarr-storage
              mountPath: /config
      volumes:
        - name: prowlarr-storage
          persistentVolumeClaim:
            claimName: prowlarr-config
