kubernetes/apps/media/prowlarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9696
