kubernetes/apps/media/prowlarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-middlewares-authentik@kubernetescrd
  name: prowlarr
spec:
  rules:
    - host: &host prowlarr.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: local-solonsstuff-com-live-tls
